// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputTextExtended renders int text multiline correctly 1`] = `
<div
  id="input3"
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      id="__ac-378f6a14-35ac-4249-9b3a-91854fe6f610"
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField ms-TextField--multiline root-41"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-52"
          >
            <textarea
              aria-invalid="false"
              class="ms-TextField-field field-53"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
            >
              This value was pre-filled
            </textarea>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputTextExtended renders int text single line correctly 1`] = `
<div
  id="input3"
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      id="__ac-e25c1801-2713-4f66-a937-2bb6660f8a02"
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField root-41"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-42"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-43"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
              value="This value was pre-filled"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputTextExtended renders text box with inline action correctly 1`] = `
<div
  id="input3"
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      id="__ac-22ebedc1-f54f-46c7-ab2e-907f205db426"
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField root-41"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-42"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-43"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
              value="This value was pre-filled"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
